--- a/transaction/1.本地事务.md
+++ b/transaction/1.本地事务.md
@@ -1,5 +1,78 @@
 # 本地事务
 
+## 简介
 
+数据库事务（简称：事务）是指逻辑上的一组操作，组成这组操作的各个单元，要不全部成功，要不全部不成功。
+
+## 特性
+
+事务特征，即 ACID：
+
+- **原子性（Atomicity）** : 一个事务中的所有操作，要么全部完成，要么全部不完成，不会结束在中间某个环节。
+
+- **一致性（Consistency）** : 在事务开始之前和事务结束以后，数据库的完整性没有被破坏。
+
+- **隔离性（Isolation）** : 数据库允许多个并发事务同时对其数据进行读写和修改的能力，隔离性可以防止多个事务并发执行时由于交叉执行而导致数据的不一致。事务隔离分为四个不同级别，参考 : [隔离级别](#隔离级别)
+
+- **持久性（Durability）** : 事务处理结束后，对数据的修改就是永久的，即便系统故障也不会丢失。
+
+### 隔离级别
+
+隔离级别 | 描述 | 脏读 | 不可重复读 | 幻读  
+-|-|:-:|:-:|:-:
+读未提交（Read uncommitted） | 允许你读取另一个事务还未提交的数据 | √ | √ | √  
+读已提交（Read committed） | 允许读取另一个事务已经提交后的数据 | × | √ | √
+可重复读（Repeatable read） | 对相同字段的多次读取是一致的，除非数据被当前事务本身改变 | × | × | √
+串行化（Serializable） | 最高的隔离级别，所有事务强制排序执行 | × | × | ×
+
+#### 脏读（Dirty Read) 
+
+一个事务读取了另一个事务未提交的数据：
+
+事务1 | 事务2
+:-:|:-:
+begin | begin
+　 | update table set age = 10 where id = 1
+select age from table where id = 1 | 　
+commit | commit
+
+如果会话 2 更新 age 为 10，但是在 commit 之前，会话 1 希望得到 age，那么会获得的值就是更新前的值。或者如果会话 2 更新了值但是执行了 rollback，而会话 1 拿到的仍是 10。这就是脏读。
+
+#### 幻读(phantom read)
+
+一个事务读取2次，得到的记录条数不一致：
+
+事务1 | 事务2
+:-:|:-:
+begin | begin
+select age from table where id > 2 | 　
+　 | insert into table(id, age) values (5, 10)
+　 | update table set age = 10 where id = 1
+　 | commit 
+select age from table where id > 2 | 　
+commit | 　
+
+上面很明显的表示了这个情况，由于在会话 1 之间插入了一个新的值，所以得到的两次数据就不一样了。
+
+#### 不可重复读(Unrepeatable Read)
+
+一个事务读取同一条记录2次，得到的结果不一致：
+
+事务1 | 事务2
+:-:|:-:
+begin | begin
+select age from table where id = 1 | 　
+　 | update table set age = 10 where id = 1
+　 | commit 
+select age from table where id = 1 | 　
+commit | 　
+
+由于在读取中间变更了数据，所以会话 1 事务查询期间的得到的结果就不一样了。
+
+> 参考 : [脏读、幻读与不可重复读](https://www.codesky.me/archives/mysql-phantom.wind)
+
+## 实现
+
+### Spring声明式事务
 
 
