--- a/transaction/1.本地事务.md
+++ b/transaction/1.本地事务.md
@@ -73,6 +73,201 @@ commit | 　
 
 ## 实现
 
-### Spring声明式事务
+### Spring注解声明式事务
+
+#### @Transactional注解的属性信息
+
+属性名 | 说明
+-|-
+name | 当在配置文件中有多个 TransactionManager , 可以用该属性指定选择哪个事务管理器。
+propagation | 事务的传播行为，默认值为 REQUIRED。
+isolation | 事务的隔离度，默认值采用 DEFAULT。
+timeout | 事务的超时时间，默认值为-1。如果超过该时间限制但事务还没有完成，则自动回滚事务。
+read-only | 指定事务是否为只读事务，默认值为 false；为了忽略那些不需要事务的方法，比如读取数据，可以设置 read-only 为 true。
+rollback-for | 用于指定能够触发事务回滚的异常类型，如果有多个异常类型需要指定，各类型之间可以通过逗号分隔。
+no-rollback- for | 抛出 no-rollback-for 指定的异常类型，不回滚事务。
+
+Propagation取值：
+
+- **REQUIRED（默认值）** : 在有transaction状态下执行；如当前没有transaction，则创建新的transaction； 
+
+- **SUPPORTS** : 如当前有transaction，则在transaction状态下执行；如果当前没有transaction，在无transaction状态下执行； 
+
+- **MANDATORY** : 必须在有transaction状态下执行，如果当前没有transaction，则抛出异常IllegalTransactionStateException； 
+
+- **REQUIRES_NEW** : 创建新的transaction并执行；如果当前已有transaction，则将当前transaction挂起； 
+
+- **NOT_SUPPORTED** : 在无transaction状态下执行；如果当前已有transaction，则将当前transaction挂起； 
+
+- **NEVER** : 在无transaction状态下执行；如果当前已有transaction，则抛出异常IllegalTransactionStateException。 
+
+#### 示例1
+
+基本使用示例
+
+```java
+@Service
+public class UserService {
+
+    @Autowired
+    private UserMapper userMapper;
+
+    @Transactional
+    public Object method() {
+        User user1 = userMapper.selectById(1);
+        user1.setAccount(user1.getAccount() - 10);
+
+        User user2 = userMapper.selectById(2);
+        user2.setAccount(user2.getAccount() + 10);
+
+        userMapper.updateById(user1);
+        // 事务回滚
+        int a = 1 / 0;
+        userMapper.updateById(user2);
+        
+        return "ok";
+    }
+}
+```
+
+#### 示例2
+
+同对象事务注解方法调用内部无注解方法，事务生效。
+
+```java
+@Service
+public class UserService {
+
+    @Autowired
+    private UserMapper userMapper;
+
+    @Transactional
+    public Object method() {
+        User user1 = userMapper.selectById(1);
+        user1.setAccount(user1.getAccount() - 10);
+
+        User user2 = userMapper.selectById(2);
+        user2.setAccount(user2.getAccount() + 10);
+
+        userMapper.updateById(user1);
+        // 事务回滚
+        subMethod();
+        userMapper.updateById(user2);
+        
+        return "ok";
+    }
+    
+    public void subMethod() {
+        int a = 1 / 0;
+    }
+}
+```
+
+#### 示例3
+
+同对象无注解方法调用内部事务注解方法，事务不生效，因为AOP代理的是对象，入口方法无增强。
+
+```java
+@Service
+public class UserService {
+
+    @Autowired
+    private UserMapper userMapper;
+
+    public Object method() {
+        User user1 = userMapper.selectById(1);
+        user1.setAccount(user1.getAccount() - 10);
+
+        User user2 = userMapper.selectById(2);
+        user2.setAccount(user2.getAccount() + 10);
+
+        userMapper.updateById(user1);
+        // 事务回滚
+        subMethod();
+        userMapper.updateById(user2);
+        
+        return "ok";
+    }
+    
+    @Transactional
+    public void subMethod() {
+        int a = 1 / 0;
+    }
+}
+```
+
+#### 示例4
+
+事务传播行为
+
+##### 场景一
+
+```java
+public class ServiceA { 
+    @Transactional 
+    public void callB() { 
+        serviceB.doSomething(); 
+    } 
+} 
+
+public class ServiceB { 
+    @Transactional 
+    public void doSomething() { 
+        throw new RuntimeException("B throw exception"); 
+    } 
+} 
+```
+
+这种情况下，我们只需要在调用ServiceA.callB时捕获ServiceB中抛出的运行时异常，则transaction就会正常的rollback。
+
+##### 场景二
+
+在保持场景一中ServiceB不变，在ServiceA中调用ServiceB的doSomething时去捕获这个异常，如下：
+
+```java
+public class ServiceA { 
+    @Transactional 
+    public void callB() { 
+        try { 
+            serviceB.doSomething(); 
+        } catch (RuntimeException e) { 
+            System.err.println(e.getMessage()); 
+        } 
+    } 
+} 
+```
+
+因为在ServiceA和ServiceB中的@Transactional propagation都采用的默认值：REQUREID。根据我们前面讲过的REQUIRED特性，当ServiceA调用ServiceB的时候，他们是处于同一个transaction中。
+
+当ServiceB中抛出了一个异常以后，ServiceB会把当前的transaction标记为需要rollback。但是ServiceA中捕获了这个异常，并进行了处理，认为当前transaction应该正常commit。此时就出现了前后不一致，也就是因为这样，抛出了前面的UnexpectedRollbackException。
+
+ ##### 场景二
+ 
+ 在保持场景二中ServiceA不变，修改ServiceB中方法的propagation配置为REQUIRES_NEW，如下： 
+ 
+ ```java
+public class ServiceB { 
+    @Transactional(propagation = Propagation.REQUIRES_NEW) 
+    public void doSomething() { 
+        throw new RuntimeException("B throw exception"); 
+    } 
+} 
+```
+
+此时，程序可以正常的退出了，也没有抛出UnexpectedRollbackException。原因是因为当ServiceA调用ServiceB时，serviceB的doSomething是在一个新的transaction中执行的。
+
+所以，当doSomething抛出异常以后，仅仅是把新创建的transaction rollback了，而不会影响到ServiceA的transaction。ServiceA就可以正常的进行commit。
+
+> [Spring Transaction属性之Propagation](https://expressren-2015.iteye.com/blog/2205304)
+
+## 注意事项
+
+- 正确的设置@Transactional 的 propagation 属性。
+
+- 正确的设置@Transactional 的 rollbackFor 属性。默认情况下，如果在事务中抛出了未检查异常（继承自 RuntimeException 的异常）或者 Error，则 Spring 将回滚事务；除此之外，Spring 不会回滚事务。
+
+- @Transactional 只能应用到 public 方法才有效。
+
+- 避免 Spring 的 AOP 的自调用问题
 
 
