--- a/transaction/1.本地事务.md
+++ b/transaction/1.本地事务.md
@@ -150,7 +150,7 @@ public class UserService {
         user2.setAccount(user2.getAccount() + 10);
 
         userMapper.updateById(user1);
-        // 事务回滚
+        // 回滚
         subMethod();
         userMapper.updateById(user2);
         
@@ -182,7 +182,7 @@ public class UserService {
         user2.setAccount(user2.getAccount() + 10);
 
         userMapper.updateById(user1);
-        // 事务回滚
+        // 不回滚
         subMethod();
         userMapper.updateById(user2);
         
