--- a/transaction/2.分布式事务.md
+++ b/transaction/2.分布式事务.md
@@ -1,1 +1,87 @@
 # 分布式事务
+
+## 方案
+
+### 强一致性方案
+   
+#### XA
+
+XA是X/Open CAE Specification (Distributed Transaction Processing)模型中定义的TM（Transaction Manager）与RM（Resource Manager）之间进行通信的接口。
+
+Java中JTA的javax.transaction.xa.XAResource定义了XA接口，它依赖数据库厂商对jdbc-driver的具体实现。
+
+##### 一阶段提交
+
+去掉XA的Prepare阶段，以达到减少资源锁定范围而提升并发性能的效果。但在事务提交的执行过程中，若出现网络故障、数据库宕机等预期之外的异常，将会造成数据不一致，且无法进行回滚。
+
+##### 二阶段提交
+
+prepare和commit/rollback
+
+##### 三阶段提交
+
+CanCommit、PreCommit、DoCommit三个阶段
+
+### 弱一致性方案
+
+#### 一阶段提交 + 补偿 + 最大努力送达
+
+支付场景。这种策略的优点是无锁定资源时间，性能损耗小。缺点是尝试多次提交失败后，无法回滚，它仅适用于事务最终一定能够成功的业务场景。因此BED是通过事务回滚功能上的妥协，来换取性能的提升。
+
+#### TCC： Try-Confirm-Cancel
+
+TCC模型是把锁的粒度完全交给业务处理，它需要每个子事务业务都实现Try-Confirm/Cancel接口。业务初始化阶段将其注入到TCC事务管理器中。吞吐量高。
+
+```
+Try:
+    尝试执行业务；
+    完成所有业务检查（一致性）；
+    预留必须业务资源（准隔离性）；
+Confirm:
+    确认执行业务；
+    真正执行业务，不作任何业务检查；
+    只使用Try阶段预留的业务资源；
+    Confirm操作满足幂等性；
+Cancel:
+    取消执行业务；
+    释放Try阶段预留的业务资源；
+    Cancel操作满足幂等性。
+```
+
+#### 消息驱动
+
+基本思路是将本地操作和发送消息放在一个事务中，下游应用向消息系统订阅该消息，收到消息后执行相应操作。本质上是依靠消息的重试机制，达到最终一致性。消息驱动的缺点是：耦合度高，需要在业务系统中引入MQ，导致系统复杂度增加。
+
+#### SAGA
+
+Saga模型把一个分布式事务拆分为多个本地事务，每个本地事务都有相应的执行模块和补偿模块（ TCC中的Confirm和Cancel）。当Saga事务中任意一个本地事务出错时，可以通过调用相关的补偿方法恢复之前的事务，达到事务最终的一致性。
+
+由于Saga模型中没有Prepare阶段，因此事务间不能保证隔离性，当多个Saga事务操作同一资源时，就会产生更新丢失、脏数据读取等问题，这时需要在业务层控制并发。
+
+> https://www.cs.cornell.edu/andru/cs711/2002fa/reading/sagas.pdf
+
+## 实现方
+
+### Atomikos
+
+实现了JTA/XA规范。
+
+### Sharding-Sphere
+
+Sharding-Sphere是一套开源的分布式数据库中间件解决方案组成的生态圈，它由Sharding-JDBC、Sharding-Proxy和Sharding-Sidecar这3款相互独立的产品组成。它们均提供标准化的数据分片、读写分离、柔性事务和数据治理功能，可适用于如Java同构、异构语言、容器、云原生等各种多样化的应用场景。
+
+项目源码 : https://github.com/sharding-sphere/sharding-sphere/
+
+官方文档 : https://shardingsphere.apache.org/document/current/cn/overview/
+
+Sharding-Sphere同时支持XA和柔性事务，它允许每次对数据库的访问，可以自由选择事务类型。分布式事务对业务操作完全透明，极大地降低了引入分布式事务的成本。
+
+### tcc-transaction
+
+TCC型事务java实现
+
+项目源码 : https://github.com/changmingxie/tcc-transaction
+
+官方文档 : https://github.com/changmingxie/tcc-transaction/wiki
+
+源码解析 : http://www.iocoder.cn/categories/TCC-Transaction/
