--- a/transaction/2.分布式事务.md
+++ b/transaction/2.分布式事务.md
@@ -48,9 +48,13 @@ Cancel:
     Cancel操作满足幂等性。
 ```
 
-#### 消息驱动
+#### 本地消息表
 
-基本思路是将本地操作和发送消息放在一个事务中，下游应用向消息系统订阅该消息，收到消息后执行相应操作。本质上是依靠消息的重试机制，达到最终一致性。消息驱动的缺点是：耦合度高，需要在业务系统中引入MQ，导致系统复杂度增加。
+基本思路是将本地操作和发送消息放在一个事务中，成功之后将本地消息表中的消息转发到消息队列中并删除本地消息，下游应用向消息系统订阅该消息，收到消息后执行相应操作。缺点是：耦合度高，导致业务系统复杂度增加。
+
+#### MQ事务
+
+有一些第三方的MQ是支持事务消息的，比如RocketMQ。
 
 #### SAGA
 
